--- a/styles/registro.css
+++ b/styles/registro.css
@@ -45,6 +45,35 @@ input[type="password"] {
     color: #999;
 }
 
+.boton {
+    border: none;
+    padding: 0px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.boton a{
+    background-color: #ffb703;
+    width: 50%;
+    padding: 15px 60px;
+    border-radius: 10px;
+    transition: all .3s ease;
+    font-size: 20px;
+    text-decoration: none;
+    color: #023047;
+}
+
+.centrar-boton {
+    display: flex;
+    justify-content: center;
+}
+
+.boton a:hover {
+    background: #219ebc;
+}
+
+/*
 .button {
     border: none;
     width: 50%;
@@ -65,6 +94,7 @@ input[type="password"] {
 .button:hover {
     background: #219ebc;
 }
+*/
 
 @media(min-width:768px) {
     .formulario {
@@ -72,5 +102,6 @@ input[type="password"] {
         width: 500px;
         margin-top: 90px;
         border-radius: 2%;
+        box-shadow: 0 0 10px 0 #023047;
     }
 }
