--- a/templates/registro.html
+++ b/templates/registro.html
@@ -9,28 +9,28 @@
       crossorigin="anonymous"
     ></script>
     <link rel="icon" type="image/png" href="./media/logo.png" />
-    <link rel="stylesheet" href="./styles/registro.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/registro.css') }}" />
     <title>Registro</title>
   </head>
   <body>
-    <form class="formulario">
+    <form class="formulario" action="/register" method="POST">
       <h2>Registro</h2>
       <div class="contenedor">
         <div class="input-contenedor">
           <i class="fa-solid fa-user icono"></i>
-          <input type="text" placeholder="Nombre completo" />
+          <input type="text" name="nombre" placeholder="Nombre completo" />
         </div>
         <div class="input-contenedor">
           <i class="fa-solid fa-phone icono"></i>
-          <input type="tel" placeholder="Número telefónico" />
+          <input type="tel" name="telefono" placeholder="Número telefónico" />
         </div>
         <div class="input-contenedor">
           <i class="fa-solid fa-envelope icono"></i>
-          <input type="email" placeholder="Correo electrónico" />
+          <input type="email"  name="correo" placeholder="Correo electrónico" />
         </div>
         <div class="input-contenedor">
           <i class="fa-solid fa-key icono"></i>
-          <input type="password" placeholder="Contraseña" />
+          <input type="password" name="contrasena" placeholder="Contraseña" />
         </div>
         <!--
         <div class="centrar-boton">
@@ -38,8 +38,8 @@
         </div>
         -->
         <div class="centrar-boton">
-          <button class="boton">
-            <a href="./index.html">Registrate</a>
+          <button class="boton" type="submit">
+            save
           </button>
         </div>
       </div>
