Pruebas de Apias Joan

--- a/templates/crear.html
+++ b/templates/crear.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./media/logo.png" />
     <link rel="stylesheet" href="./styles/navbar.css" />
-    <link rel="stylesheet" href="./styles/crear.css" />
+    <link rel="stylesheet" href="/static/css/crear.css" />
     <title>Crear</title>
 </head>
 <body>
