--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
     <title>Iniciar sesión</title>
   </head>
   <body>
-    <form class="formulario" action="/login" method="GET">
+    <form class="formulario" action='/login' method="POST">
       <h2>Inicia sesión</h2>
       <div class="contenedor">
         <div class="input-contenedor">
@@ -30,7 +30,7 @@
         </div>
         <div class="input-contenedor">
           <i class="fa-solid fa-key icono"></i>
-          <input type="password" name="contrasena" placeholder="Contraseña" >
+          <input type="password" name="contrasena" placeholder="Contraseña" />
         </div>
         <div class="centrar-boton">
           <button class="boton">
