--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./media/logo.png" />
-    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}" />
     <title>Perfil de usuario</title>
   </head>
   <body>
     <header>
       <div class="logo">
         <a href="./index.html">
-          <img src="./media/logo.png" alt="imagen" />
+          <img src="/static/media/logo.png" alt="imagen" />
         </a>
       </div>
       <nav>
