--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -13,7 +13,7 @@ header {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-a {
+.link {
     text-decoration: none;
     color: #fff;
     cursor: pointer;
