--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./media/logo.png" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}" />
+    <link rel="stylesheet" href="https://bootswatch.com/5/sketchy/bootstrap.min.css">
+    
     <title>Perfil de usuario</title>
   </head>
   <body>
@@ -26,70 +28,112 @@
     {% with mensajes = get_flashed_messages() %}
     {% if mensajes  %}
       {% for mensaje in  mensajes %}
-        <p>{{ mensaje }}</p>
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+          <p>{{ mensaje }}</p>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
       {% endfor %}
     {% endif %}
     {% endwith %}
-    <h1>{{ids}}</h1>
-    <form action='/crear/{{ids}}' method="POST" >
-      <h2>programar nueva clase</h2>
-      <input type="text" name="materia"  placeholder="Materia">
-      <input type="text" name="dias"  placeholder="Dias">
-      <input type="text" name="inicio"  placeholder="Inicio">
-      <input type="text" name="final"  placeholder="Final">
-      <input type="text" name="instituto"  placeholder="Instituto">
-      <input type="text" name="salon" id="" placeholder="Salon">
-      <button type="submit">GUARDAR</button>
-      </form>
+<div class="row">
+  <div class="col-md-5">
+    <div class="card card-body">
+      <form action='/crear/{{ids}}' method="POST" >
+        <h2>programar nueva clase</h2>
+        <div class="form-group">
+          <label class="col-form-label mt-4" for="inputDefault"></label>
+          <input type="text" class="form-control" name="materia"  placeholder="Materia" id="inputDefault">
+        </div>
+        <div class="form-group">
+          <label class="col-form-label mt-4" for="inputDefault"></label>
+          <input type="text" class="form-control" name="dias"  placeholder="Dias" id="inputDefault">
+        </div>
+        <div class="form-group">
+          <label class="col-form-label mt-4" for="inputDefault"></label>
+          <input type="text" class="form-control" name="inicio"  placeholder="Inicio" id="inputDefault">
+        </div>
+        <div class="form-group">
+          <label class="col-form-label mt-4" for="inputDefault"></label>
+          <input type="text" class="form-control" name="final"  placeholder="Final" id="inputDefault">
+        </div>
+        <div class="form-group">
+          <label class="col-form-label mt-4" for="inputDefault"></label>
+          <input type="text" class="form-control" name="instituto"  placeholder="Instituto" id="inputDefault">
+        </div>
+        <div class="form-group">
+          <label class="col-form-label mt-4" for="inputDefault"></label>
+          <input type="text" class="form-control" name="salon" id="" placeholder="Salon" id="inputDefault">
+        </div>
+        <button type="submit">GUARDAR</button>
+        </form>
+    </div>
+  </div>
+</div>
 
-      
-        <table >
-          <thead> 
-            <td>Nombre</td>
-            <td>Materia</td>
-            <td>Dias</td>
-            <td>Inicio</td>
-            <td>Final</td>
-            <td>Instituto</td>
-            <td>Salon</td>
-            <td>Acciones</td>
-          </thead>
-          <tbody>
-            <td>
-              {% for informacion in informaciones %}
-              <tr>
-                <td>
-                  {{ informacion.1 }}
-                </td>
-                <td>
-                  {{ informacion.2 }}
-                </td>
-                <td>
-                  {{ informacion.3 }}
-                </td>
-                <td>
-                  {{ informacion.4 }}
-                </td>
-                <td>
-                  {{ informacion.5 }}
-                </td>
-                <td>
-                  {{ informacion.6 }}
-                </td>
-                <td>
-                  {{ informacion.7 }}
-                </td>
-                <td>
-                  <a href="/eliminar/{{ informacion.0 }}">ELIMINAR</a>
-                </td>
-                <td>
-                  <a href="/actualizar/{{ informacion.0 }}">ACTUALIZAR</a>
-                </td>
-              </tr>
-              {% endfor %}
-            </td>
-          </tbody>
-        </table>
+<div class="col-md-7">
+
+  </div>
+
+
+
+
+    <div class="col-12">
+          <table class="table table-hover">
+    <thead> 
+      <td scope="col" class="table-danger">Nombre</td>
+      <td scope="col" class="table-danger">Materia</td>
+      <td scope="col" class="table-danger">Dias</td>
+      <td scope="col" class="table-danger">Inicio</td>
+      <td scope="col" class="table-danger">Final</td>
+      <td scope="col" class="table-danger">Instituto</td>
+      <td scope="col" class="table-danger">Salon</td>
+      <td scope="col" class="table-danger">Acciones</td>
+    </thead>
+    <tbody>
+      <td>
+        {% for informacion in informaciones %}
+        <tr class="table-warning">
+          <td>
+            {{ informacion.1 }}
+          </td>
+          <td >
+            {{ informacion.2 }}
+          </td>
+          <td >
+            {{ informacion.3 }}
+          </td>
+          <td >
+            {{ informacion.4 }}
+          </td>
+          <td >
+            {{ informacion.5 }}
+          </td>
+          <td >
+            {{ informacion.6 }}
+          </td >
+          <td>
+            {{ informacion.7 }}
+          </td>
+          <td scope="col">
+            <button type="button" class="btn btn-danger"><a href="/eliminar/{{ informacion.0 }}">ELIMINAR</a></button>
+          </td>
+          <td scope="col">
+            <button type="button" class="btn btn-success"><a href="/actualizar/{{ informacion.0 }}">ACTUALIZAR</a></button>
+            
+          </td>
+        </tr>
+        {% endfor %}
+      </td>
+    </tbody>
+  </table>
+      </div>
+
+
+
+
 
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </html>
