--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,11 @@
   {% with mensajes = get_flashed_messages() %}
   {% if mensajes  %}
     {% for mensaje in  mensajes %}
-      <p>{{ mensaje }}</p>
+    
+      <div class="alert alert-primaryalert-dismissible fade show" role="alert">
+        <p>{{ mensaje }}</p>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
     {% endfor %}
   {% endif %}
   {% endwith %}
@@ -18,6 +22,7 @@
     ></script>
     <link rel="icon" type="image/png" href="./media/logo.png" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
+    <link rel="stylesheet" href="https://bootswatch.com/5/sketchy/bootstrap.min.css">
     <title>Iniciar sesión</title>
   </head>
   <body>
@@ -34,7 +39,9 @@
         </div>
         <div class="centrar-boton">
           <button class="boton">
+            <span class="badge bg-info">
             Iniciar sesión
+            </span>
           </button>
         </div>
         <p>
@@ -43,4 +50,7 @@
       </div>
     </form>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </html>
